--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "lint": "tsdx lint",
     "prepare": "tsdx build",
     "size": "size-limit",
-    "analyze": "size-limit --why"
+    "analyze": "size-limit"
   },
   "peerDependencies": {},
   "jest": {
