--- a/node-example/Dockerfile
+++ b/node-example/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:18-alpine
 WORKDIR /app
-COPY package.json yarn.lock ./
+COPY ["package.json" ,"yarn.lock" ,"./"]
 RUN yarn
 COPY . .
 CMD ["node","index.js"]
