--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
   // see https://www.typescriptlang.org/tsconfig to better understand tsconfigs
   "include": ["src", "types"],
   "compilerOptions": {
-    "module": "ESNext",
-    "lib": ["dom", "esnext"],
+    "module": "esnext",
+    "target": "ES2021",
+    "lib": ["dom", "ESNext"],
     "importHelpers": true,
     // output .d.ts declaration files for consumers
     "declaration": true,
