--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "version": "0.3.4",
   "license": "MIT",
   "main": "./dist/index.js",
+  "exports":"./dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
