--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
   "compilerOptions": {
     "module": "ES2020",
     "target": "ES2021",
-    "lib": ["dom", "ES2021"],
+    "lib": ["dom", "ES2019"],
     "importHelpers": true,
     // output .d.ts declaration files for consumers
     "declaration": true,
@@ -30,6 +30,9 @@
     // error out if import and file system have a casing mismatch. Recommended by TS
     "forceConsistentCasingInFileNames": true,
     // `tsdx build` ignores this option, but it is commonly used when type-checking separately with `tsc`
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "inlineSources": true,
+    "useDefineForClassFields": false,
+    "allowSyntheticDefaultImports": true
   }
 }
