--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "build": "tsdx build --format esm --target node",
     "test": "tsdx test",
     "lint": "tsdx lint",
-    "prepare": "tsdx build --format esm --target node",
+    "prepare": "yarn build",
     "size": "size-limit",
     "analyze": "size-limit"
   },
