--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "version": "0.3.4",
   "license": "MIT",
   "main": "dist/http-pro.esm.js",
+  "exports": "./dist/http-pro.esm.js",
   "typings": "dist/index.d.ts",
   "files": [
     "dist"
