--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "jest-fetch-mock": "^3.0.3",
     "size-limit": "^7.0.8",
     "tslib": "^2.4.0",
+    "tsup": "^7.2.0",
     "typescript": "^4.3.4"
   },
   "dependencies": {}
