--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "version": "0.3.5",
   "license": "MIT",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": {
@@ -73,8 +75,8 @@
   "type": "module",
   "size-limit": [
     {
-      "path": "dist/http-pro.esm.js",
-      "limit": "10 KB"
+      "path": "dist/index.js",
+      "limit": "6 KB"
     }
   ],
   "devDependencies": {
