--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     }
   ],
   "devDependencies": {
+    "@http-pro/validator": "^0.0.1",
     "@size-limit/preset-small-lib": "^7.0.8",
     "@types/jest": "^29.5.5",
     "husky": "^7.0.4",
@@ -85,7 +86,9 @@
     "ts-jest": "^29.1.1",
     "tslib": "^2.4.0",
     "tsup": "^7.2.0",
-    "typescript": "^4.3.4"
+    "typescript": "^4.3.4",
+    "yup": "^1.3.2",
+    "zod": "^3.22.4"
   },
   "dependencies": {}
 }
