--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "node": ">=16"
   },
   "scripts": {
-    "prepare": "yarn build",
+    "lint": "tsc",
+    "prepare": "husky install && yarn build",
     "size": "size-limit",
     "analyze": "size-limit",
     "build": "tsup",
@@ -79,7 +80,7 @@
     "@http-pro/validator": "^0.1.0",
     "@size-limit/preset-small-lib": "^7.0.8",
     "@types/jest": "^29.5.5",
-    "husky": "^7.0.4",
+    "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
     "size-limit": "^7.0.8",
