feat: typecheck and test github action.

--- a/.github/workflows/typecheck-test.yml
+++ b/.github/workflows/typecheck-test.yml
@@ -1,4 +1,4 @@
-name: lint
+name: typecheck-and-test
 on:
   push:
     branches:
@@ -19,3 +19,6 @@ jobs:
 
       - name: Run lint
         run: yarn lint
+
+      - name: Run tests
+        run: yarn test
