--- a/package.json
+++ b/package.json
@@ -87,9 +87,10 @@
     "ts-jest": "^29.1.1",
     "tslib": "^2.4.0",
     "tsup": "^7.2.0",
-    "typescript": "^4.3.4",
+    "typescript": "^4.3.4"
+  },
+  "dependencies": {
     "yup": "^1.3.2",
     "zod": "^3.22.4"
-  },
-  "dependencies": {}
+  }
 }
